## Makefile.am -- Config file for GNU Automake.
##
## Copyright (C) 2024 Artyom V. Poptsov <poptsov.artyom@gmail.com>
##
## This file is part of Guile-Web-Driver.
##
## Guile-Web-Driver is free software: you can redistribute it and/or modify it
## under the terms of the GNU General Public License version 3 as published by
## the Free Software Foundation.
##
## Guile-Web-Driver is distributed in the hope that it will be useful, but
## WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
## General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with Guile-Web-Driver.  If not, see <http://www.gnu.org/licenses/>.

include $(top_srcdir)/build-aux/am/guile.am

SOURCES = \
	chain.scm

moddir=$(prefix)/share/guile/site/$(GUILE_EFFECTIVE_VERSION)/web/proxy/interceptor/
godir=$(libdir)/guile/$(GUILE_EFFECTIVE_VERSION)/site-ccache/web/proxy/interceptor/

### Makefile.am ends here.
